Tue Apr 25 21:23:28 1995  Chris Provenzano  (proven@mit.edu)

        * forward.c (rd_and_store_for_creds()) : Rewritten to use
                auth_context and the new krb5_rd_creds().
        * forward.c (get_for_creds()) : New function replacing
                krb5_get_for_creds() and uses auth_context and new
                krb5_mk_creds() routine.
        * kerberos5.c (kerberos5_send()): Set initial flags on auth_context
		to KRB5_AUTH_CONTEXT_RET_TIME, and use new
        	rd_and_store_for_creds() routine.
	* kerberos5.c (kerberos5_forward()): Use the new get_for_creds().

Sat Apr 22 00:50:14 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos5.c (kerberos5_init): Only call krb5_init_context if 
		the telnet context hasn't been initialized yet.

Thu Apr 20 20:12:32 1995  Mark Eichin  <eichin@cygnus.com>

	Changes for testsuite from Ian Taylor <ian@cygnus.com>
	* kerberos5.c (telnet_srvtab): New global variable.
	(telnet_krb5_realm): New global variable.
	(kerberos5_send): If telnet_krb5_realm is set, copy it into
	creds.server.  Pass new_creds to krb5_mk_req_extended, not &creds.
	Pass &new_creds->keyblock to krb5_copy_keyblock_contents, not
	new_creds.
	(kerberos5_is): pass telnet_srvtab in to krb_rd_req.
	(kerberos5_forward): If telnet_krb5_realm is set, copy it into
	local_creds->server.

Wed Mar 29 15:08:43 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos5.c: No need to have the session_key established for
		mutual authentication to work.  (That's only done if
		ENCRYPTION is defined.)

	* auth.c (authenticators): Allow mutual authentication even if the
		ENCRYPTION option is not turned on.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * kerberos5.c (kerberos5_is()): Use new calling convention for 
		krb5_rd_req(), and krb5_mk_rep().

Fri Mar 24 23:51:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kerberos5.c (kerberos5_send): Initialize auth_context to zero
		before calling mk_req.
